--- a/.github/workflows/pypi-upload.yml
+++ b/.github/workflows/pypi-upload.yml
@@ -11,10 +11,17 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: 3.9
+     
+      - name: "Installs dependencies"
+        run: |
+          python3 -m pip install --upgrade pip
+          python3 -m pip install setuptools wheel twine
+      
       - name: "Builds and uploads to PyPI"
         run: |
           python3 setup.py sdist bdist_wheel
           python3 -m twine upload dist/*
+      
         env:
           TWINE_USERNAME: __token__
           TWINE_PASSWORD: ${{ secrets.TWINE_TOKEN }}
